--- a/public_html/s2s_factory_v3.html
+++ b/public_html/s2s_factory_v3.html
@@ -100,7 +100,7 @@
 			var blocker = document.getElementById('blocker');
 			var instructions = document.getElementById('instructions');
 
-			var god = true;
+
 
 			// http://www.html5rocks.com/en/tutorials/pointerlock/intro/
 
@@ -197,13 +197,7 @@
 
 			init();
 
-			var controlsEnabled = false;
 
-			var moveForward = false;
-			var moveBackward = false;
-			var moveLeft = false;
-			var moveRight = false;
-			var canJump = false;
 
 
 
@@ -1043,6 +1037,15 @@
 
 			}
 
+
+
+
+
+			////////////////////////////////////////////////////////////////////
+			///
+			///  This holds all functionality for moving in 3D S2S
+			///
+			////////////////////////////////////////////////////////////////////
 			var meter = 25;
 			var factoryWidth = 100 * meter;
 			var factoryLength = 100 * meter;
@@ -1052,11 +1055,24 @@
 
 			var limitXMax = factoryLength;
 			var limitXMin = -factoryLength;
+
+			//set up control modes
 			setGodControls(limitZMax, limitZMin, limitXMax, limitXMin);
 			setMarioControls(limitZMax, limitZMin, limitXMax, limitXMin, objects);
-
-			var route = false;
 			loadAllRoutes();
+
+			//controls
+			var route = false;
+			var god = true;
+			var controlsEnabled = false;
+
+			var moveForward = false;
+			var moveBackward = false;
+			var moveLeft = false;
+			var moveRight = false;
+			var canJump = false;
+
+
 
 			function animate() {
 
@@ -1097,6 +1113,21 @@
 					}
 				}
 				renderer.render(scene, camera);
+			}			
+
+
+			function goToPosition(_x, _y, _z) {
+				controlsEnabled = false;
+				route = true;
+
+				controls.getObject().position.y = _y * meter;
+
+				controls.getObject().position.x = _x * meter;
+
+				controls.getObject().position.z = _z * meter;
+				//sleep(1500);
+
+
 			}
 
 			function isNumeric(_no) {
@@ -1115,140 +1146,6 @@
 				}
 			}
 
-			function processPosition(move, _nx, _ny, _nz, timeMs, callback) {
-				controlsEnabled = false;
-				if (!move) {
-					//Directly go to position
-					goToPosition(_nx, _ny, _nz);
-				} else {
-					//Move slowly to postion
-					moveToPosition(_nx, _ny, _nz, timeMs, callback);
-				}
-			}
-
-			//DISTANCE IN PIXELS
-			function moveToPosition(_nx, _ny, _nz, timeMs, callback) {
-
-
-				var _totalTimeMs = parseFloat(timeMs);
-
-				//every '_interval' the character should move
-				var _interval = 50;
-
-				//speed
-				var _speedMeters = 2;
-				//pixels per milliseconds, 25 pixels = 1m
-				var _speed = (2 * 25) / 1000;
-
-				//New positions
-				var _newX = _nx;
-				var _newY = _ny;
-				var _newZ = _nz;
-				//Existing positions
-				var _existX = controls.getObject().position.x;
-				var _existY = controls.getObject().position.y;
-				var _existZ = controls.getObject().position.z;
-				//Is the position a change?
-				var xChange = true;
-				var yChange = true;
-				var zChange = true;
-
-				//Distance in pixels (converted before this function)
-				var _distanceX = getTDistance(_newX, _existX);
-				var _distanceY = getTDistance(_newY, _existY);
-				var _distanceZ = getTDistance(_newZ, _existZ);
-
-				//Time to travel @ _speed
-				var _miliSOfMovmentX = Math.abs(_distanceX / _speed);
-				var _miliSOfMovmentY = Math.abs(_distanceY / _speed);
-				var _miliSOfMovmentZ = Math.abs(_distanceZ / _speed);
-
-				//Number of steps (miliseconds / miliseconds)
-				var _totalStepsX = parseFloat(_miliSOfMovmentX / _interval);
-				var _totalStepsY = parseFloat(_miliSOfMovmentY / _interval);
-				var _totalStepsZ = parseFloat(_miliSOfMovmentZ / _interval);
-
-				var _stepX = parseFloat(_distanceX / _totalStepsX);
-				var _stepY = parseFloat(_distanceY / _totalStepsY);
-				var _stepZ = parseFloat(_distanceZ / _totalStepsZ);
-
-				console.log(getTDistance(_newX, _existX) + '/' + _totalTimeMs + ' / ' + _interval);
-				var startTime = new Date().getTime();
-				var count = 0;
-				var xStop = false;
-				var yStop = false;
-				var zStop = false;
-
-				var _stepCountX = 0;
-				var _stepCountY = 0;
-				var _stepCountZ = 0;
-				console.log('x:' + _totalStepsX + ' y: ' + _totalStepsY + ' z: ' + _totalStepsZ);
-				console.log('xstep:' + _stepX + ' ystep: ' + _stepY + ' zstep: ' + _stepZ);
-				//this function fill fire every '_interval' ms
-
-				var timeXStopMoving = new Date().getTime() + _miliSOfMovmentX;
-				var timeYStopMoving = new Date().getTime() + _miliSOfMovmentY;
-				var timeZStopMoving = new Date().getTime() + _miliSOfMovmentZ;
-
-				var _now = new Date().getTime();
-				var _totalStop = new Date().getTime() + _totalTimeMs;
-
-
-				var interval = setInterval(function() {
-
-					var _now = new Date().getTime();
-
-					if (xChange) {
-						if (_stepCountX >= _totalStepsX) {
-							xStop = true;
-						} else {
-							controls.getObject().position.x = parseFloat(controls.getObject().position.x) + parseFloat(_stepX);
-							_stepCountX++;
-						}
-					}
-					if (yChange) {
-						if (_stepCountY >= _totalStepsY) {
-							yStop = true;
-						} else {
-							controls.getObject().position.y = parseFloat(controls.getObject().position.y) + parseFloat(_stepY);
-							_stepCountY++;
-						}
-					}
-					if (zChange) {
-						if (_stepCountZ >= _totalStepsZ) {
-							zStop = true;
-						} else {
-							controls.getObject().position.z = parseFloat(controls.getObject().position.z) + parseFloat(_stepZ);
-							_stepCountZ++
-						}
-					}
-					if (xStop && yStop && zStop) {
-						if (_now > _totalStop) {
-							clearInterval(interval);
-							callback({
-								status: 'complete'
-							});
-							return;
-						}
-					}
-					count++
-
-				}, _interval);
-
-			}
-
-			function goToPosition(_x, _y, _z) {
-
-				controls.getObject().position.y = _y * meter;
-
-				controls.getObject().position.x = _x * meter;
-
-				controls.getObject().position.z = _z * meter;
-				sleep(1500);
-				route = true;
-
-			}
-
 			function isFloat(n) {
 				return n === +n && n !== (n | 0);
 			}
@@ -1256,6 +1153,14 @@
 			function isInteger(n) {
 				return n === +n && n === (n | 0);
 			}
+
+			////////////////////////////////////////////////////////////////////
+			///
+			///  END END END END
+			///
+			////////////////////////////////////////////////////////////////////
+
+
 
 			function sleep(ms) {
 				var start = new Date().getTime(),
@@ -1363,7 +1268,7 @@
 						case 191:
 							//goToPosition(-49.80, marioHeight, -942.95);
 
-							startRoute("routeGetItems.json", processPosition);
+							startRoute("routeGetItems.json", goToPosition);
 
 							break;
 							//go to position from sales to shopfloor to lorry to customer press1
