--- a/public_html/3Dfactory_KvL2.html
+++ b/public_html/3Dfactory_KvL2.html
@@ -74,7 +74,7 @@
 		</div>
 		<div class="col-md-6">
 			<div style="text-align: left" >
-				<p >Please click through tabs 1 - 8, each will load an animated 'tour' of that stage. </br> Please <a href="s2s_factory_v2.html" target="blank"> Click Here </a> to explore full model</p>
+				<p id="Commentary">Please click through tabs 1 - 8, please read the text then click on the text to free the camera while the automatic tour plays. </br> Please <a href="s2s_factory_v2.html" target="blank"> Click Here </a> to explore full model</p>
 			</div>
 		</div>
 		<div class="col-md-2">
@@ -144,7 +144,7 @@
 					<!--	<asp:ValidationSummary runat="server" CssClass="text-danger" /> -->
 					<div class="row">
 						<div class="col-md-12">
-							<p class="infoText">Charge phones from order, attach unique ID tag. </br> Open asset track system and begin functional test. </br> If damaged beyond repair, fail functional test. If repairable set aside to repair at end of order.  </p>
+							<p class="infoText">Charge phones from order, attach unique ID tag and place on tag reader. </br> Open asset track system and begin functional test, look up unfamiliar phones on google. </br>   </p>
 						</div>
 					</div>
 
@@ -165,7 +165,7 @@
 					<!--	<asp:ValidationSummary runat="server" CssClass="text-danger" /> -->
 					<div class="row">
 						<div class="col-md-12">
-							<p class="infoText">Shop floor carry out functional tests. </br> Phones processed in batches of at least 10</p>
+							<p class="infoText">Shop floor carry out functional tests. </br> Phones processed in batches of at least 10 </br>If damaged beyond repair, fail functional test.</br> If repairable set aside to repair at end of order.</p>
 						</div>
 					</div>
 
@@ -215,7 +215,7 @@
 					</div>
 				</div>
 
-		
+
 			</div>
 		</div>
 	</div>
