--- a/public_html/storyboard.html
+++ b/public_html/storyboard.html
@@ -61,6 +61,8 @@
 							</li>
 							<li><a class="tab" href="#sell-items" data-toggle="tab" onclick="document.getElementById('mainPic').src='images/story8.jpg'">8: Sell items</a>
 							</li>
+							<li><a class="tab" href="#sell-itemsA" data-toggle="tab" onclick="document.getElementById('mainPic').src='images/story8a.jpg'">8a: Sell items (continued)</a>
+							</li>
 
 
 						</ul>
